# Prometheus-edu-skills

./: CONTRIBUTING.md  LICENSE  README.md
course-syllabus-architect/: SKILL.md
course-syllabus-architect/references/: output_formats.md  syllabus_template.md  top_university_courses.md
examples/: cpp-intro-syllabus.md
examples/graduate-deep-learning/: syllabus.md
examples/labs/lab-1-wordfreq/: CMakeLists.txt  README.md  RUBRIC.md
examples/labs/lab-1-wordfreq/data/: small.txt
examples/labs/lab-1-wordfreq/src/: main.cpp  wordfreq.cpp  wordfreq.hpp
examples/labs/lab-1-wordfreq/staff/solution/: wordfreq.cpp
examples/labs/lab-1-wordfreq/tests/: CMakeLists.txt  test_wordfreq.cpp
examples/labs/lab-2-csvstat/: CMakeLists.txt  README.md  RUBRIC.md
examples/labs/lab-2-csvstat/data/: quoted.csv  sales.csv
examples/labs/lab-2-csvstat/src/: main.cpp  parser.cpp  parser.hpp  report.cpp  stats.cpp  stats.hpp
examples/labs/lab-2-csvstat/staff/solution/: parser.cpp  stats.cpp
examples/labs/lab-2-csvstat/tests/: CMakeLists.txt  test_parser.cpp  test_stats.cpp
lab-designer/: SKILL.md
lab-designer/references/: lab_document_template.md  reference_labs.md  scaffold_patterns.md
